fixed body spacing so now the plugins will fit on entire screen with responsiveness

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,5 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 body {
-  @apply bg-blue-500 p-12;
+  @apply m-0;
+  @apply p-0;
 }
